--- a/styles/index.css
+++ b/styles/index.css
@@ -64,3 +64,51 @@ body{
     
     gap: 1em;
 }
+
+.close {
+    color: #888;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    border: none;
+    background: none;
+
+  }
+
+#signupModel {
+  display: block; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+.model-content {    
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  top: 50%;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 40%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+}
+.model-header{
+    display: flex;
+    justify-content: space-between;
+    padding: 0%;
+    border-width: 5px;
+    border-bottom-style: groove;
+   
+}
+
+.model-header h2{
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: #888;
+}
