home page changes

--- a/styles/index.css
+++ b/styles/index.css
@@ -47,6 +47,9 @@ body{
     background-repeat: no-repeat;
     background-size: 100% 100%;
   background-attachment: fixed;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  
 }
 
 .posts button{
@@ -58,11 +61,12 @@ body{
 }
 .posts{
     display: flex;
-    position: fixed;
-    top: 50%;
-    left: 43%;
-    
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
     gap: 1em;
+    
+    
 }
 
 .close {
@@ -90,11 +94,10 @@ body{
 .model-content {    
   position: relative;
   background-color: #fefefe;
-  margin: auto;
-  top: 50%;
+  margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 40%;
+  width:50vh ;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
 }
 .model-header{
