--- a/styles/index.css
+++ b/styles/index.css
@@ -16,7 +16,10 @@
 .navbutton button:hover {
     cursor: pointer;
     background-color: rgba(0, 0, 255, 0.681);
-    font-size:medium;
+}
+.navbutton button:active{
+    background-color: blue;
+  transform: translateY(1px);
 }
 .navbutton{
     display: flex;
@@ -56,14 +59,21 @@ body{
    height: 4vh;
    width: 15vh;
 }
+.posts button:hover{
+    cursor: pointer;
+    background-color: rgba(245, 245, 117, 0.895);
+}
+.posts button:active{
+    background-color: rgb(254, 254, 87);
+    transform: translateY(1px);
+}
+
 .posts{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 80vh;
     gap: 1em;
-    
-    
 }
 
 .close {
@@ -77,16 +87,16 @@ body{
   }
 
 #signupModel {
-  display: block; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: block; 
+  position: fixed; 
+  z-index: 1; 
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
 }
 .model-content {    
   position: relative;
