--- a/styles/index.css
+++ b/styles/index.css
@@ -44,7 +44,7 @@
 
 
 body{
-    background-image: url(/Scribbler-Project/images/background.jpg);
+    background-image: url(/images/background.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
   background-attachment: fixed;
